Update Makefile for VGA module and test module names

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,7 +5,7 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 SRC_DIR = $(PWD)/../src
-PROJECT_SOURCES = VGA_Module.v   # ← Changed from project.v
+PROJECT_SOURCES = VGA.v   # ← Changed from project.v
 
 ifneq ($(GATES),yes)
 
@@ -37,8 +37,8 @@ COMPILE_ARGS 		+= -I$(SRC_DIR)
 # VERILOG_SOURCES += $(PWD)/tb.v    # ← Commented out since Cocotb test replaces it
 
 # Cocotb simulation targets:
-TOPLEVEL = VGA_Module.v              # ← This is your DUT module name
-MODULE = test_vga_module           # ← This matches your Python test file (no .py)
+TOPLEVEL = VGA              # ← This is your DUT module name
+MODULE = test_VGA           # ← This matches your Python test file (no .py)
 COCOTB_TEST_MODULES = test_vga_module
 
 # include cocotb's make rules to take care of the simulator setup
